test/files/neg/t5148.check
t5148.scala:4: error: Symbol 'term scala.tools.nsc.interpreter.IMain.memberHandlers' is missing from the classpath.
This symbol is required by 'method scala.tools.nsc.interpreter.Imports.allReqAndHandlers'.
Make sure that term memberHandlers is in your classpath and check for conflicting dependencies with `-Ylog-classpath`.
A full rebuild may help if 'Imports.class' was compiled against an incompatible version of scala.tools.nsc.interpreter.IMain.
class IMain extends Imports
            ^
one error found
